remove app link, rebeccapurple <3

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
           Haute OS X
         </h1>
         <h2>A GUI to help create style guides for web projects.</h2>
-            <a class="btn-download btn btn-outline-white" href="assets/Haute.zip"><div class='initial-state'>
-          Download Alpha 0.1.0
-        </div>
-        <div class='hover-state'>
-          <i class='fa fa-apple'></i>
-          OS X 10.7+
-        </div>
-        </a>
-    
+        <button class='btn-download btn btn-outline-white'>
+          <div class='initial-state'>
+            Coming Soon!
+          </div>
+          <div class='hover-state'>
+            <i class='fa fa-apple'></i>
+            OS X 10.7+
+          </div>
+        </button>
       </div>
       <div class='text-center'>
         <img class="home-app-image" src="assets/images/haute-app-home.png" />
